# DSU_BoatControl

./: CMakeLists.txt  README.md  requirements.txt
BoatControl_v0.1/: gpioSet.py  yoloRun.py
BoatControl_v0.2/: gpioButt.py  gpioEcho.py  gpioMoto.py  yoloRun.py
BoatControl_v0.3/: button_handler.py  distance_sensor.py  motor_control.py  yolo_main.py
document/report/: report_20251102.md
document/study/: 01_Python_and_Conda.md  02_PyTorch_Basics.md  03_OpenMMLab_Stack.md  04_RT_DETR_Model.md  05_Model_Training.md  06_ONNX_and_TensorRT.md  07_CPP_Inference_Setup.md  YOLO_기본정리.md  YOLO_발생문제해결.md
src/: detector.h  detector_onnxruntime.cpp  detector_stub.cpp  main.cpp
